src/objects/MX_SB_VTS_RegistroObjeciones__c.object
<CustomObject>
    <description>Mantiene la relación entre las objeciones y los registros de Lead y Opportunity</description>
    <fields>
        <fullName>MX_SB_VTS_CatObjecion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indica la Objeción que se aplico a un registro</description>
        <label>Catalogo objeciones</label>
        <referenceTo>MX_SB_VTS_CatalogoObjeciones__c</referenceTo>
        <relationshipLabel>Registros de Objeciones</relationshipLabel>
        <relationshipName>Registros_de_Objeciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_LeadLook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indica el registro Lead al cual se le aplico objeción</description>
        <label>Candidato</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Registros de Objeciones</relationshipLabel>
        <relationshipName>Registros_de_Objeciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_LookActivity__c</fullName>
        <description>Indica la llamada por la cual se generaron las objeciones</description>
        <encryptionScheme>None</encryptionScheme>
        <label>LLamada Activa</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_NoUsoObjecion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica si la objeción no funciono</description>
        <label>No funciono</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_ObjecionOpp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indica el registro de Oportunidad al que se le aplico Objeción</description>
        <label>Objeción Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Registros de Objeciones</relationshipLabel>
        <relationshipName>Registros_de_Objeciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_ObjecionUtil__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica si al asesor telefónico le resulto útil la objeción</description>
        <label>Se utilizo objeción</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_TipoObjecion__c</fullName>
        <description>Indica el tipo de objeción que se aplico</description>
        <label>Tipo Objeción</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Objeciones</fullName>
                </value>
                <value>
                    <fullName>Objeciones Reales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Registro Objeciones</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MX_SB_VTS_ObjecionOpp__c</columns>
        <columns>MX_SB_VTS_LeadLook__c</columns>
        <columns>MX_SB_VTS_CatObjecion__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>MX_SB_VTS_TipoObjecion__c</columns>
        <columns>MX_SB_VTS_ObjecionUtil__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>ObjecSelect-{00000}</displayFormat>
        <label>Nombre de Registro Objeciones</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registros de Objeciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>